--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 	path = lib/lvgl
 	url = https://github.com/qmk/lvgl.git
 	branch = release/v8.2
+[submodule "keyboards/helix/pico/keymaps/stdevap/a2j"]
+	path = keyboards/helix/pico/keymaps/stdevap/a2j
+	url = https://github.com/m47ch4n/qmk-translate-ansi-to-jis.git
