--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "keyboards/helix/pico/keymaps/stdevap/a2j"]
 	path = keyboards/helix/pico/keymaps/stdevap/a2j
 	url = https://github.com/m47ch4n/qmk-translate-ansi-to-jis.git
+[submodule "keyboards/salicylic_acid3/7skb/keymaps/stdevap/lib/a2j"]
+	path = keyboards/salicylic_acid3/7skb/keymaps/stdevap/lib/a2j
+	url = https://github.com/m47ch4n/qmk-translate-ansi-to-jis.git
